# encrypted-dns-server

./: .gitignore  Cargo.toml  LICENSE  README.md  encrypted-dns.toml  example-encrypted-dns.toml  undelegated.txt
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml  test.yml
src/: anomymized_dns.rs  anonymized_dns.rs  blacklist.rs  cache.rs  config.rs  crypto.rs  dns.rs  dnscrypt.rs  dnscrypt_certs.rs  errors.rs  globals.rs  main.rs  metrics.rs  pq.rs  rate_limiter.rs  resolver.rs  varz.rs
