[package]
name = "encrypted-dns"
version = "0.9.17"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A modern encrypted DNS server (DNSCrypt v2, Anonymized DNSCrypt, DoH)"
keywords = ["dnscrypt", "encryption", "dns", "doh", "proxy"]
license = "MIT"
homepage = "https://github.com/jedisct1/encrypted-dns-server"
repository = "https://github.com/jedisct1/encrypted-dns-server"
categories = ["asynchronous", "network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
clap = { version = "4.5.27", default-features = false, features = [
  "std",
  "cargo",
  "wrap_help",
] }
coarsetime = "0.1.35"
daemonize-simple = "0.1.6"
dnsstamps = "0.1.10"
educe = { version = "0.6.0", features = ["full"] }
env_logger = { version = "0.11.6", default-features = false, features = [
  "humantime",
] }
futures = { version = "0.3.31", features = ["async-await"] }
hyper = { version = "1.6.0", default-features = false, features = [
  "server",
  "http1",
], optional = true }
ipext = "0.1.0"
libsodium-sys-stable = "1.22.2"
log = { version = "0.4.25", features = ["std", "release_max_level_debug"] }
mimalloc = { version = "0.1.43", default-features = false }
parking_lot = "0.12.3"
rand = "0.9.0"
rlimit = "0.10.2"
rustc-hash = "2.1.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde-big-array = "0.5.1"
sieve-cache = "0.2.1"
siphasher = "1.0.1"
slabigator = "0.9.2"
socket2 = "0.5.8"
tokio = { version = "1.43.0", features = [
  "net",
  "io-std",
  "io-util",
  "fs",
  "time",
  "rt-multi-thread",
] }
toml = "0.8.19"

[target.'cfg(target_family = "unix")'.dependencies]
privdrop = "0.5.4"

[dependencies.prometheus]
optional = true
package = "prometheus"
version = "0.13.4"
default-features = false
features = ["process"]

[features]
default = ["metrics"]
metrics = ["hyper", "prometheus"]

[package.metadata.deb]
extended-description = """\
An easy to install, high-performance, zero maintenance proxy to run an \
encrypted DNS server."""
assets = [
  [
    "target/release/encrypted-dns",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/encrypted-dns/README.md",
    "644",
  ],
  [
    "example-encrypted-dns.toml",
    "usr/share/doc/encrypted-dns/example-encrypted-dns.toml",
    "644",
  ],
]
section = "network"
depends = "$auto"
priority = "optional"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
